Add config tests and add config API
